# apart

./: .env.example  .gitignore  ACTION_PLAN.md  ACTION_PLAN_V2.md  Dockerfile  GAP_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  POWERSEEK_ANALYSIS.md  QUICK_START.md  README.md  TESTING.md  UPDATED_ANALYSIS.md  docker-compose.yml  main.py  mockup-chat-panel.html  pyproject.toml  run_server.py  run_worker.py  test_llm.py
benchmarks/: METRICS_GUIDE.md  README.md  cascade_monitor_comparison.yaml  cascade_monitor_comparison_README.md  danger_detection_example.yaml  example_benchmark.yaml  gemini-flash_benchmark.yaml  run_cascade_comparison.sh
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js
docs/: BENCHMARKING.md  FINAL-SUMMARY.md  GEMINI-JSON-MODE-README.md  LLM_INTEGRATION.md  MIGRATION.md  NEXT_PHASE.md  POWER_SEEKING_METRICS.md  PRACTICAL_POWER_SCENARIOS.md  STATUS_TRACKING_ISSUES.md  api-reference.md  architecture.md  danger-detection.md  dashboard.md  error-handling.md  gemini-structured-json.md  introduction.md  llm-providers.md  logging-reference.md  ollama-model-testing.md  ollama-vs-gemini-comparison.md  scenario-creation.md  spatial-system.md  todo.md
examples/: simple_benchmark.py
scenarios/: AI_SAFETY_SCENARIOS_OVERVIEW.md  ai_safety_2027_landscape.yaml  ai_safety_2027_landscape_README.md  autonomous_systems_cascade.yaml  autonomous_systems_cascade_README.md  benchmark_parallel.yaml  claude_example.yaml  compute_resource_demo.yaml  config.yaml  dashboard_demo.yaml  engine_test.yaml  gemini_example.yaml  grok_example.yaml  (+17 more)
src/: agent.py  (+8 more)
(+189 files in other folders)
