[project]
name = "apart"
version = "0.3.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.1",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "google-generativeai>=0.3.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "anthropic>=0.8.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=2.0.0",
    "rq>=1.16.0",
    "redis>=5.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "fakeredis>=2.20.0",
]

[project.scripts]
apart-server = "server.app:main"
apart = "cli:main"

[tool.pytest.ini_options]
markers = [
    "redis: tests requiring a real Redis instance (deselect with '-m \"not redis\"')",
]
